Revision history for Dist-Zilla-Plugin-ModuleBuildTiny

{{$NEXT}}

0.018     2025-04-06 23:28:49+02:00 Europe/Brussels
          - Add a auto_configure_requires option
          - Use perl v5.20 syntax

0.017     2023-05-08 18:42:37+02:00 Europe/Amsterdam
          - Include extra newline in Build.PL to facilitate other plugins

0.016     2023-04-28 15:51:16+02:00 Europe/Brussels
          - Add header and footer attributes
          - Add configure dependency on MBT version 0.044 if include/ or src/

0.015     2016-06-09 19:28:18+02:00 Europe/Amsterdam
          Adapted to dzil v6

0.014     2015-08-22 19:23:20+02:00 Europe/Amsterdam
          Increase minimum MBT in conservative logic

0.013     2015-07-23 11:58:57+02:00 Europe/Amsterdam
          Restored installability on 5.10
          Added documentation for static install

0.012     2015-07-16 17:00:08+02:00 Europe/Amsterdam
          Also look for .xs, .PL files in files gathered in memory

0.011     2015-06-30 17:54:00+02:00 Europe/Amsterdam
          Switch default to conservative version logic
          Add static install option

0.010     2015-03-27 14:36:24+01:00 Europe/Amsterdam
          Bump a prereq to avoid meta validation issues

0.009     2015-02-18 21:19:51+01:00 Europe/Amsterdam
          Implement a conservative minimum mbt heuristic
          Detect minimum perl version from configure, build, test and runtime phases instead of just runtime

0.008     2014-10-30 16:05:29+01:00 Europe/Amsterdam
          Build.PL is now created at the correct phase (gather_files), with
          final content determined at the normal time (setup_installer)

0.007     2014-09-01 11:25:41+02:00 Europe/Amsterdam
          use strict, warnings in generated Build.PL

0.006     2014-01-13 00:54:54CET+0100 Europe/Amsterdam
          Prohibit the use of a sharedir configuration that is not supported
          Add basic testing

0.005     2013-09-08 21:41:33 Europe/Amsterdam
          Prohibit dynamic_config